// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextLogo > applies dark variant (white text on dark surfaces) 1`] = `
<span
  class="font-display font-normal tracking-tight leading-none text-white "
  style="letter-spacing: -0.015em;"
>
  HoundShield
</span>
`;

exports[`TextLogo > applies light variant (ink text on light surfaces) 1`] = `
<span
  class="font-display font-normal tracking-tight leading-none text-ink-primary "
  style="letter-spacing: -0.015em;"
>
  HoundShield
</span>
`;
